Dockerfile updated using tomcat